--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             <div class="row">
                                 <div class="buttons padd-15">
                                     <button class="btn btn-light animate_animated"><a
-                                        href="./images/Pawan Dewani Resume.pdf" target="_blank">Download CV</a></button>
+                                        href="./images/Pawan Resume.pdf" target="_blank">Download CV</a></button>
                                     <button class="btn btn-light animate_animated"
                                         onclick="location.href='#contact'">Hire me</button>
                                 </div>
@@ -457,7 +457,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="https://pawandewani4192.github.io/E-Commerce/" target="_blank" class="link">Visit Project</a>
+                    <a href="https://pawandewani4192.github.io/Fashion-Website/" target="_blank" class="link">Visit Project</a>
                 </div>
                 <!-- portfolio-item end -->
                 <!-- portfolio-item -->
@@ -473,7 +473,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="https://pawandewani4192.github.io/Fashion-Website/" target="_blank" class="link">Visit
+                    <a href="https://pawandewani4192.github.io/E-Commerce/" target="_blank" class="link">Visit
                         Project</a>
                 </div>
                 <!-- portfolio-item end -->
