--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                     <p>Birthday : <span>12 November 2001</span></p>
                                 </div>
                                 <div class="info-item padd-15">
-                                    <p>Age : <span>20</span></p>
+                                    <p>Age : <span>23</span></p>
                                 </div>
                                 <div class="info-item padd-15">
                                     <p>Website : <span>www.domain.com</span></p>
@@ -140,13 +140,13 @@
                                     <p>Email : <span>pawandewani4192@gmail.com</span></p>
                                 </div>
                                 <div class="info-item padd-15">
-                                    <p>Degree : <span>B.COM(Computer Application)</span></p>
+                                    <p>Degree : <span>MCA( Masters Of Computer Application)</span></p>
                                 </div>
                                 <div class="info-item padd-15">
                                     <p>Mobile : <span>9589494031</span></p>
                                 </div>
                                 <div class="info-item padd-15">
-                                    <p>City : <span>Indore</span></p>
+                                    <p>City : <span>Pune, Maharashtra</span></p>
                                 </div>
                                 <div class="info-item padd-15">
                                     <p>Freelance : <span>Available</span></p>
@@ -155,7 +155,7 @@
                             <div class="row">
                                 <div class="buttons padd-15">
                                     <button class="btn btn-light animate_animated"><a
-                                        href="./images/Pawan Resume.pdf" target="_blank">Download CV</a></button>
+                                        href="" target="_blank">Download CV</a></button>
                                     <button class="btn btn-light animate_animated"
                                         onclick="location.href='#contact'">Hire me</button>
                                 </div>
@@ -241,6 +241,18 @@
                                 <div class="timeline-box padd-15">
                                     <div class="timeline shadow-dark">
                                         <!-- timeline Item  -->
+                                         <div class="timeline-item">
+                                            <div class="circle-dot"></div>
+                                            <h6 class="timeline-date">
+                                                <i class="fa fa-calendar"></i> 2022-2024
+                                            </h6>
+                                            <h4 class="timeline-title">Masters Degree</h4>
+                                            <p class="timeline-text">
+                                                I have Completed My MCA (Masters Of Computer Application)
+                                                from Savitribai Phule Pune University,
+                                                 Pune, Maharashtra.
+                                            </p>
+                                        </div>
                                         <div class="timeline-item">
                                             <div class="circle-dot"></div>
                                             <h6 class="timeline-date">
@@ -295,12 +307,12 @@
                                         <div class="timeline-item">
                                             <div class="circle-dot"></div>
                                             <h6 class="timeline-date">
-                                                <i class="fa fa-calendar"></i> 2021-2022
+                                                <i class="fa fa-calendar"></i> 10/2023-12/2024
                                             </h6>
-                                            <h4 class="timeline-title">Django-Web-Developer</h4>
+                                            <h4 class="timeline-title">Python Developer Intern</h4>
                                             <p class="timeline-text">
-                                                I have worked as a Django-Web-Developer & Designer in Affimintus
-                                                Technologies and gained a hands-on experience of 1 Year on Latest
+                                                I have worked as a Python Web-Developer & Designer in Codsoft
+                                                Technologies and gained a hands-on experience of 3 Months on Latest
                                                 Technologies of full-Stack Web-development.
 
                                             </p>
@@ -329,7 +341,7 @@
                                         <div class="timeline-item">
                                             <div class="circle-dot"></div>
                                             <h6 class="timeline-date">
-                                                <i class="fa fa-calendar"></i> 2021
+                                                <i class="fa fa-calendar"></i> 2022
                                             </h6>
                                             <h4 class="timeline-title">Certificate of Full-Stack Python & Django Web Development</h4>
                                             <p class="timeline-text">
@@ -577,7 +589,7 @@
                 <div class="contact-info-item padd-15">
                     <div class="icon"><i class="fa fa-map-marker"></i></div>
                     <h4>Address</h4>
-                    <p>Bhawarkua,Indore,India</p>
+                    <p>Pune, Maharashtra</p>
                 </div>
                 <!-- contact-info-item end -->
 
