--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
                                             </h6>
                                             <h4 class="timeline-title">Python Developer Intern</h4>
                                             <p class="timeline-text">
-                                                I have worked as a Python Web-Developer & Designer in Codsoft
-                                                Technologies and gained a hands-on experience of 3 Months on Latest
+                                                I have worked as a Python Web-Developer in OM 
+                                                Softwares and gained a hands-on experience of 6 Months on Latest
                                                 Technologies of full-Stack Web-development.
 
                                             </p>
@@ -581,7 +581,7 @@
                 <div class="contact-info-item padd-15">
                     <div class="icon"><i class="fa fa-phone"></i></div>
                     <h4>Call Me On</h4>
-                    <p>+91 9589494031</p>
+                    <p>+91 9589494031 / 8871969064</p>
                 </div>
                 <!-- contact-info-item end -->
 
